{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 24,
  "lineage": "2433c0fc-127a-5b59-4c62-f3420370f684",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498623650:security-group/sg-03247d7adaa06ede6",
            "description": "Allow access to PostgreSQL DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03247d7adaa06ede6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "014498623650",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498623650:security-group/sg-0c34960e3f28e823e",
            "description": "public security group",
            "egress": [],
            "id": "sg-0c34960e3f28e823e",
            "ingress": [],
            "name": "development-db-sg",
            "name_prefix": "",
            "owner_id": "014498623650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "development-db-sg"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "development-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.postgres",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-2967823535",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c34960e3f28e823e",
            "security_group_rule_id": "sgr-08f666138f47eff3d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.postgres.aws_security_group.postgres",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.postgres",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3195303850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c34960e3f28e823e",
            "security_group_rule_id": "sgr-07a61cdffbda9cfd8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.postgres.aws_security_group.postgres",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082df28ccf6372d85",
            "arn": "arn:aws:ec2:ap-south-1:014498623650:elastic-ip/eipalloc-082df28ccf6372d85",
            "domain": "vpc",
            "id": "eipalloc-082df28ccf6372d85",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-134-168.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.134.168",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498623650:internet-gateway/igw-06395ee27b768e364",
            "id": "igw-06395ee27b768e364",
            "owner_id": "014498623650",
            "tags": {
              "Name": "dev-miq-igw"
            },
            "tags_all": {
              "Name": "dev-miq-igw"
            },
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498623650:route-table/rtb-09d0cd1516f7253ac",
            "id": "rtb-09d0cd1516f7253ac",
            "owner_id": "014498623650",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06395ee27b768e364",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-miq-public-rtb"
            },
            "tags_all": {
              "Name": "dev-miq-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498623650:security-group/sg-0a978c8be7915ba1b",
            "description": "public security group",
            "egress": [],
            "id": "sg-0a978c8be7915ba1b",
            "ingress": [],
            "name": "development-miq",
            "name_prefix": "",
            "owner_id": "014498623650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "development-miq"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "development-miq"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-653225462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a978c8be7915ba1b",
            "security_group_rule_id": "sgr-051673dace927b8c9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3620085699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a978c8be7915ba1b",
            "security_group_rule_id": "sgr-0dcbda8bd3f3ef400",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2422550595",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a978c8be7915ba1b",
            "security_group_rule_id": "sgr-062399e2015a3d758",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-223178429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a978c8be7915ba1b",
            "security_group_rule_id": "sgr-02c0925d13de17150",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498623650:subnet/subnet-00b1ea1d8f3537124",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1ea1d8f3537124",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498623650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-miq-private-1"
            },
            "tags_all": {
              "Name": "dev-miq-private-1"
            },
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498623650:subnet/subnet-00821fbdce8ec8548",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00821fbdce8ec8548",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498623650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-miq-private-2"
            },
            "tags_all": {
              "Name": "dev-miq-private-2"
            },
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498623650:subnet/subnet-0ae3f2f3ed5485292",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae3f2f3ed5485292",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014498623650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-miq-private-3"
            },
            "tags_all": {
              "Name": "dev-miq-private-3"
            },
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043e1d1f87fbcb771",
            "ipv6_native": false,
            "map_public_ip_on_launch": true,
            "tags": {
              "Name": "dev-miq-public-1"
            },
            "tags_all": {
              "Name": "dev-miq-public-1"
            },
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3611b3affeb66aa",
            "ipv6_native": false,
            "map_public_ip_on_launch": true,
            "tags": {
              "Name": "dev-miq-public-2"
            },
            "tags_all": {
              "Name": "dev-miq-public-2"
            },
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeb82903fd660953",
            "ipv6_native": false,
            "map_public_ip_on_launch": true,
            "tags": {
              "Name": "dev-miq-public-3"
            },
            "tags_all": {
              "Name": "dev-miq-public-3"
            },
            "vpc_id": "vpc-0ad7d9e8aae7bf80c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:014498623650:vpc/vpc-0ad7d9e8aae7bf80c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf3e82e123c00634",
            "default_route_table_id": "rtb-08f6e5ce9e805267b",
            "default_security_group_id": "sg-0dae334cfbce9f27d",
            "dhcp_options_id": "dopt-03e486d999fad71fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad7d9e8aae7bf80c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f6e5ce9e805267b",
            "owner_id": "014498623650",
            "tags": {
              "Name": "dev-miq"
            },
            "tags_all": {
              "Name": "dev-miq"
            }
          }
        }
      ]
    }
  ]
}